tests/ui/views/tuple_field_alias.stderr
error[RX3007]: overlapping or aliased mutable sub-views of `v`: cannot prove the sub-views are disjoint
 --> $DIR/views/tuple_field_alias.rx:5:5
  |
5 |     pair.1[i] = 2.0; //~ ERROR RX3007
  |     ^^^^^^^^^ aliased mutable sub-view written here
