tests/ui/views/tuple_field_alias.rx
//@ spec: RXS-0078
kernel fn k(v: ViewMut<global, f32>, i: usize, t: ThreadCtx<1>) {
    let pair = (v, v);
    pair.0[i] = 1.0;
    pair.1[i] = 2.0; //~ ERROR RX3007
}

fn main() {}
